--- a/styleNew.css
+++ b/styleNew.css
@@ -17,17 +17,18 @@ body {
   position: fixed;
   inset: 0;
   z-index: -1;
-  background: radial-gradient(circle at 50% 50%, rgba(255,230,180,0.08), transparent 70%);
+ background: radial-gradient(circle at 50% 50%, rgba(255,230,180,0.1), transparent 70%);
 }
+
 
 /* --- ОБЩИЕ ЭКРАНЫ --- */
 .screen {
 
   /* position: absolute; */
-  inset: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  /* inset: 0; */
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
   padding: 38px;
   text-align: center;
   opacity: 0;
@@ -35,8 +36,8 @@ body {
   display: none;
 }
 
-.screen.active { opacity: 1;display: flex; }
-.screen.open{ position: absolute;}
+.active { opacity: 1;display: flex; }
+.open{ position: absolute;}
 
 /* --- ТЕКСТОВЫЙ БЛОК --- */
 .textbox {
@@ -80,6 +81,39 @@ button:hover {
   z-index: 10;
 }
 
-#s2{
-    padding-bottom: 30%;
+#stage{
+    padding-bottom: 15vh;
+}
+
+.cover{
+  position:fixed;inset:0;
+  flex-direction:column;
+  align-items:center;justify-content:center;
+  cursor:pointer;z-index:40;
+  transition:transform .9s cubic-bezier(.2,.9,.23,1),opacity .8s;
+}
+
+.cover-card{
+  
+  text-align:center;
+  padding:22px 26px;border-radius:14px;
+  background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
+  /* border:1px solid rgba(255,255,255,0.04); */
+  border:1px solid rgba(212,162,89,0.12);
+  
+  transform-origin:center;
+  box-shadow:0 18px 60px rgba(0,0,0,0.6);
+  backdrop-filter: blur(3px);
+  text-shadow: 0 0 8px rgba(212,162,89,0.35);
+}
+.seal{font-size:28px;margin-bottom:8px}
+.cover-title{
+  font-family:"Cormorant Garamond",serif;font-size:1.2rem;margin-bottom:6px;color:#efe8de;
+}
+.cover-sub{opacity:.5;color:rgba(255,255,255,0.78);font-size: .7rem;}
+
+/* hide cover */
+.cover.hide{
+  transform:scale(1.08) translateY(-6px);
+  opacity:0;filter:blur(6px);pointer-events:none;
 }
